tests/neg/i7359-c.scala
trait SAMTrait
  def first(): String
  def wait(): Unit // error
